css/style.css
/* ... */
.repo li.dir .icon-folder-open {
    color: #80a6cd;
}

.repo-btns {
    margin-left: 20px;
}

pre {
    font-size: 10px;
}
.home-content pre {
    margin-left: -40px;
}

.span2 {
    min-height: 1px;
}

.nav-box-left {
    padding: 0;
    border: 1px solid #ccc;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    font-weight: bold;
    color: #aaa;
    position: fixed;
    top: 130px;
    width: 150px;
    background-color: white;
}

.nav-box-left-nested {
    padding: 0;
}

.nav-box > li > a {
    border-top: 1px solid #ccc;
    margin: 0 0 -1px;
    padding: 8px 10px;
}

.nav-box > li > a:first-child {
    border: none;
}

.nav-box > li > a:hover {
    background-color: #c3d3e3;
    color: #444;
}

.nav-box > li > a .icon-chevron-down {
    float: right;
    color: #aaa;
}

.nav-box > li > a:hover .icon-chevron-down {
    color: #444;
}

.nav-box-left-nested > li > a {
    padding: 8px 0 8px 10px;
    margin-left: 20px;
}

.navbar .nav .nav-box .active a {
    color: #fff;
    background-color: #08C;
}

.dropdown-menu a {
    color: #08C;
    font-weight: bold;
}

.download-row {
    margin-left: 0;
}

.download-row > .span6 {
    width: 46%;
}

.download-row .span6 > .span6 {
    width: 100%;
}

.sectionbody img {
    max-height: 400px;
}

.note-tip-icon {
    font-size: 30px;
    margin-right: 10px;
    color: #669EB2;
}

.note-tip-block {
    margin: 10px 0;
}

.note-tip-block td {
    padding: 10px;
}

.note-tip-content {
    background-color: #F8F4E1;
    border: 1px solid #DDDDDD;
}

.post {
	font-size: 1em;
    font-weight: lighter;
    padding: 10px;
}

.post img {
	float: left;
	padding: 10px 10px 10px 0px;
}

.post ul {
	list-style-position: inside;
}

.title-break {
    display: none;
    line-height: 1em;
}

.title-line2 {
    margin-top: -10px;
}

.accordion-group {
    margin-top: 20px;
    font-size: 18px;
    border: none;
}

.accordion-group h2 {
    color: #C6000F;
}

.accordion-group .image-container {
    background-color: #EEEEEE;
    padding: 3px;
    display: inline-block;
}

.accordion-group .image-container img {
    width: 100%;
    max-width: 800px;
}

.nav-collapse.hidden {
    display: inherit;
    visibility: visible;
}

.nav-collapse.hidden .navbar {
    display: none;
}

.download-row .span6 h2 {
    color: #c6000f;
    padding-left: 5px;
    background-color: #c3d3e3;
    -webkit-border-radius: 8px 8px 0 0;
    -moz-border-radius: 8px 8px 0 0;
    border-radius: 7px 7px 0 0;
    margin-bottom: 10px;
}

/* Footer Styles */
footer.container {
    margin-top: 20px;
    background-color: rgba(197, 219, 229, 0.5);
    border-top: 3px solid #CCCCCC;
}

footer .span3 {
    padding: 10px;
}

footer h3 {
    font-size: 25px;
    margin-bottom: 15px;
}

footer h3.twitter-notFound {
    font-size: 20px;
}

footer .span3 > p {
    font-size: 18px;
}

footer .row .span3:last-child {
    position: relative;
    min-height: 150px;
}

.footer-logo {
    display: block;
}

.footer-jboss {
    display: block;
    margin-top: 20px;
}

.attribution {
    font-size: 10px;
    float: right;
    display: inline-block;
    margin-top: 20px;
}

#aerogear-twitter {
    height: 300px;
    padding-right: 10px;
    overflow: scroll;
}
#aerogear-twitter li {
    margin-bottom: 10px;
    font-size: 12px;
    clear: both;
    list-style-type:none;
}
#aerogear-twitter li img {
    float:left;
    margin:0px 10px 10px 0px;
    border:1px solid #c2c2c2;
    -moz-box-shadow: 0px 0px 4px #c2c2c2;
    -webkit-box-shadow: 0px 0px 4px #c2c2c2;
    box-shadow: 0px 0px 4px #c2c2c2;
}
#aerogear-twitter li a {
    text-decoration:none;
    color: #009;
}

.select-all {
    margin: 10px;
}

.component-group {
    list-style: none;
}

.component {
    display: inline;
}

.desc {
    display: block;
    color: #777;
    font-size: .9em;
}

.builder-alert {
    display: none;
}

.custom-builder {
    margin-left: 0;
}

.loading-indicator {
    text-align: center;
    padding-bottom: 10px;
}

.navbar-fixed-top {
    margin: inherit;
}

.topic-page-logo {
    float: left;
    display: inline-block;
    margin-right: 50px;
    margin-bottom: 30px;
    height: 300px;
}

.topic-page-logo img {
    width: 90%;
    max-width: 200px;
}

.basic {
    padding: 10px;
}

@media (max-width: 1200px) {
    .start-header .start-title {
        font-size: 30px;
    }

    .start-header p {
        font-size: 18px;
    }

    .span4 h3 {
        font-size: 16px;
    }
}
/* ... */

